# jdbc_compatibility_test_suite_runner

./: CMakeLists.txt  Makefile  exclude  props
src/nl/cwi/da/jdbccts/: DriverWrapper.java  TestRunner.java
src/org/duckdb/jdbccts/: DriverWrapper.java  TestRunner.java
